<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AA - Apricancello automatico</string>
    <string name="rangestatus">Range Status:</string>
    <string name="last_auto_internet_call">Last internet command:</string>
    <string name="in_area">entrato in zona cancello!!</string>
    <string name="out_area">fuori zona cancello</string>
    <string name="last_position_lbl">Last position:</string>
    <string name="last_position_lat">0</string>
    <string name="last_position_long">0</string>
    <string name="action_settings">Settings</string>
    <color name="white">#FFFFFF</color>
</resources>
